[metadata]
name = pydt
version = 0.0.1

[options]
packages = dtbase
install_requires =
  cycler==0.10.0
  decorator==4.4.2
  kiwisolver==1.3.1
  matplotlib==3.3.3
  networkx==2.5
  numpy==1.19.4
  Pillow==8.1.0
  pyparsing==2.4.7
  python-dateutil==2.8.1
  RISparser==0.4.3
  scipy==1.6.0
  six==1.15.0
